[tool.poetry]
name = "geographica-longitude"
packages = [
    { include='longitude' }
]
version = "0.9.7"
description = "A longitudinal lib"
authors = ["Geographica <hello@geographica.com>"]
homepage = "https://github.com/GeographicaGS/Longitude"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
aredis = "^1.1"
asyncio = "^3.4"
cartoframes = {version = "^0.9.0", optional = true}
geolibs-cartoasync = {version = "^0.0.4", optional = true}
pandas = {version = "^0.24.1", optional = true}
sqlalchemy = ">=1.1.15, <2.0.0"
pyjwt = {version = "^1.7", optional = true}
aioauth-client = "^0.16.2"
environs = "^7.3.1"
psycopg2-binary = {version = "^2.8", optional = true}
redis = "^3.4.1"
carto = {version = "^1.6", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
jupyterlab = "^0.35.6"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
